# ltheory-launcher

./: .gitattributes  LICENSE  README.md  nuxt.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js  uno.config.ts
.github/workflows/: main.yml  test_pr.yml  virustotal.yml
src/: App.vue  app.vue  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/installer/: English.nsh  installer.nsi
src-tauri/src/: main.rs  speed_calc.rs
src/composables/: useBlockContextMenu.ts  useBlockFileDrop.ts  useTimer.ts
src/pages/: index.vue
src/router/: index.ts
src/types/: index.ts
src/views/: Home.vue
