[package]
name = "ltr-launcher"
version = "0.1.0"
description = "LTR Launcher"
authors = ["IllustrisJack"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = [ "shell-open", "shell-execute", "os-all", "dialog-confirm", "dialog-message", "fs-exists", "dialog-open", "dialog-ask", "window-unminimize", "window-unmaximize", "window-show", "path-all", "window-close", "app-all", "window-set-focus", "window-maximize", "window-minimize", "window-hide", "window-start-dragging", "window-center"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Plugins
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
tauri-plugin-positioner = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
