[package]
name = "ltheory_redux_launcher"
version = "0.4.4"
description = ""
authors = ["IllustrisJack"]
repository = "https://github.com/Limit-Theory-Redux/ltheory-launcher"
edition = "2021"
rust-version = "1.72"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.2", features = [
    "shell-open",
    "updater",
    "window-show",
    "window-close",
    "window-hide",
    "window-unminimize",
    "window-start-dragging",
    "window-minimize",
    "window-maximize",
    "window-unmaximize",
    "dialog-all",
    "os-all",
    "fs-all",
    "path-all",
    "app-all",
    "process-command-api",
] }
# Plugins
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
tauri-plugin-positioner = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
winapi = "0.3.9"
winreg = "0.52"
window-shadows = "0.2.2"
reqwest = { version = "0.12.3", features = ["stream"] }
futures-util = "0.3.14"
zip = "0.6.6"
tokio = "1.34"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

# File size optimizations
[profile.release]
strip = true # Automatically strip symbols from the binary.
lto = true
